--- a/test/http/views/layouts/main.hbs
+++ b/test/http/views/layouts/main.hbs
@@ -15,9 +15,9 @@
         {{>navbar}}
         {{>breadcrumbs}}
     </header>
-    <div>
+    <main>
         {{{body}}}
-    </div>
+    </main>
     <footer>
         {{>footer}}
     </footer>
