--- a/test/http/views/partials/navbar.hbs
+++ b/test/http/views/partials/navbar.hbs
@@ -2,7 +2,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between h-16">
             <div class="flex items-center">
-                <a href="#" class="text-white text-lg font-bold">I Want My MTG</a>
+                <a class="text-white text-lg font-bold" href="/">I Want My MTG</a>
             </div>
             {{!-- Desktop --}}
             <div class="hidden md:flex space-x-4 items-center">
@@ -44,7 +44,7 @@
         {{/if}}
     </div>
 </nav>
-<p id="response-message" class="response-message bg-{{#if status }}{{ status }}{{else}}info{{/if}} hidden">
+<p id="response-message" class="response-message bg-{{#if status }}{{ status }}{{else}}info{{/if}} hidden" role="alert">
     {{message}}
 </p>
 
