--- a/test/http/views/partials/cardInfo.hbs
+++ b/test/http/views/partials/cardInfo.hbs
@@ -1,34 +1,34 @@
-<section class="card-info">
+<section class="card-info flex flex-col md:flex-row bg-white shadow-lg rounded-lg p-6 mb-6">
 
-    <section class="card-image">
-        <img src="{{card.imgSrc}}" alt="{{card.name}} - ({{card.setCode}})" />
+    <section class="md:w-1/3 mb-4 md:mb-0">
+        <img class="card-image w-full" src="{{card.imgSrc}}" alt="{{card.name}} - ({{card.setCode}})" />
     </section>
 
-    <h3 class="card-title">
-        <div>
-            <i class="ss ss-{{card.setCode}} ss-2x"></i>
-            <span>{{card.setCode}}</span>
-        </div>
-        <span>{{card.name}}</span>
-        <span>{{>manaCost card=card}}</span>
-    </h3>
-
-    {{!-- TODO: update to ORACLE text --}}
-    <section class="play-info">
-        <h3>Original Text</h3>
-        <p class="card-type">{{card.type}}</p>
+    <section class="play-info md:w-2/3 md:pl-6">
+        <h3 class="card-title text-2xl font-bold mb-4">
+            <div class="flex items-center mb-2">
+                <i class="ss ss-{{card.setCode}} ss-2x mr-2"></i>
+                <span span="text-lg font-medium">{{card.setCode}}</span>
+            </div>
+            <span class="block text-xl">{{card.name}}</span>
+            <span class="block">{{>manaCost card=card}}</span>
+        </h3>
+        {{!-- TODO: update to ORACLE text --}}
+        <h3 class="text-lg font-semibold mb-2">Original Text</h3>
+        <p class="card-type text-sm text-gray-600 mb-2">{{card.type}}</p>
         {{!-- TODO: impl card-subtype --}}
         {{!-- <p class"card-subtype">{{card.subtype}}</p> --}}
         {{!-- TODO: update to ORACLE text --}}
         {{!-- <h3>Oracle Text</h3>
         <p class="card-oracle-text">{{card.oracleText}}</p> --}}
-        <p class="card-original-text">{{card.originalText}}</p>
-        <p class="card-rarity">{{card.rarity}}</p>
-        <p class="card-number">{{card.number}}</p>
+        <p class="card-original-text text-sm text-gray-600 mb-2">{{card.originalText}}</p>
+        <p class="card-rarity text-sm text-gray-600 mb-2">{{card.rarity}}</p>
+        <p class="card-number text-sm text-gray-600">{{card.number}}</p>
     </section>
 
-    <section class="card-legalities">
-        <ul>
+    <section class="card-legalities md:w-full mt-4">
+        <h3 class="text-lg font-semibold mb-2">Legalities</h3>
+        <ul class="list-disc list-inside text-sm text-gray-600">
             {{#each card.legalities as |legality|}}
             <li>{{legality.key}}: {{legality.value}}</li>
             {{/each}}
@@ -36,7 +36,9 @@
     </section>
 </section>
 
-<section class="price-info">{{#if card.price}}{{card.price}}{{else}}0{{/if}}</section>
+<section class="price-info text-lg font-semibold mb-4">
+    {{#if card.price}}{{card.price}}{{else}}0{{/if}}
+</section>
 
 <section class="inventory-info">
     {{>cardsOwned}}
