--- a/test/http/views/partials/navbar.hbs
+++ b/test/http/views/partials/navbar.hbs
@@ -6,7 +6,7 @@
             </div>
             {{!-- Desktop --}}
             <div class="hidden md:flex space-x-4 items-center">
-                <a class="navbar-link" href="/">Home</a>
+                <a class="navbar-link" href="/"><img src="/public/images/logo.png" alt="logo" /></a>
                 <a class="navbar-link" href="/sets">Sets</a>
                 {{#if authenticated}}
                 <a class="navbar-link" href="/inventory">My Inventory</a>
