--- a/src/adapters/http/views/partials/navbar.hbs
+++ b/src/adapters/http/views/partials/navbar.hbs
@@ -2,7 +2,9 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between h-16">
             <div class="flex items-center">
-                <a class="text-white text-lg font-bold" href="/">I Want My MTG</a>
+                <a href="/">
+                    <img class="logo" src="/public/images/logo.png" alt="logo" />
+                </a>
             </div>
             {{!-- Desktop --}}
             <div class="hidden md:flex space-x-4 items-center">
