update card entity, unit tests

--- a/src/adapters/http/views/partials/cardInfo.hbs
+++ b/src/adapters/http/views/partials/cardInfo.hbs
@@ -15,18 +15,12 @@
                 <span class="text-lg font-medium">{{toUpperCase card.setCode}}</span>
             </div>
         </h3>
-        {{!-- TODO: update to ORACLE text --}}
         <section class="subsection-container">
             <section class="subsection-container">
-                <h3 class="section-title">Original Text</h3>
+                <h3 class="section-title">Oracle Text</h3>
                 <p class="card-type section-content">{{card.type}}</p>
-                {{!-- TODO: impl card-subtype --}}
-                {{!-- <p class"card-subtype">{{card.subtype}}</p> --}}
-                {{!-- TODO: update to ORACLE text --}}
-                {{!-- <h3>Oracle Text</h3>
-                <p class="card-oracle-text">{{card.oracleText}}</p> --}}
-                <p class="card-original-text section-content">
-                    {{card.originalText}}
+                <p class="card-oracle-text section-content">
+                    {{card.oracleText}}
                 </p>
             </section>
             <p class="card-rarity section-content">{{card.rarity}}</p>
