Add Legality array to Card (#43)
* fix oracle text ingestion
* fix ingestion, inventory unit tests
* add format enum, legality entity
* add legality package and classes
* update readme
* default legality to not legal if no value,
* update unit tests,
* move update/insert logic to service from repo,
* nest legality inside of card
* legality showing on page
* legality ingest
* legalities updates, tests fixed for next steps
* test utils fixed
* front end status default fix
* legalities ingestion working - front end working
* legalities overall working
* card mock repo, update tests
* update card mapper, svc test, mock repo
* fix mapping legality dtos
* handle card repo save errs in svc,
* update/fix card svc tests
* simplify legality entity
* add legality validator to card
* update card number to number type
* card service validation and testing working
* card.svc.save saves and deletes legalities correctly
* card service covering everything for save
* ingest extract card number fix
* fix legality validation in card
* legalities ingest to service to repo to service to controller to hbs all working
* remove try catch from save

--- a/test/http/views/partials/cardInfo.hbs
+++ b/test/http/views/partials/cardInfo.hbs
@@ -31,7 +31,7 @@
             <h3 class="section-title">Legalities</h3>
             <ul class="list-disc list-inside section-content">
                 {{#each card.legalities as |legality|}}
-                <li>{{legality.key}}: {{legality.value}}</li>
+                <li>{{capitalize legality.format}}: {{legality.status}}</li>
                 {{/each}}
             </ul>
         </section>
