--- a/src/adapters/http/public/css/app.css
+++ b/src/adapters/http/public/css/app.css
@@ -1,3 +1,14 @@
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    appearance: textfield;
+    -moz-appearance: textfield;
+}
+
 .bg-success {
     background-color: rgb(185 250 185);
 }
