--- a/src/adapters/http/views/partials/cardsOwned.hbs
+++ b/src/adapters/http/views/partials/cardsOwned.hbs
@@ -1,13 +1,14 @@
-<form class="quantity-form inline-flex items-stretch border-none rounded overflow-hidden" data-item-id="{{card.id}}">
+<form class="quantity-form inline-flex items-stretch border-none rounded overflow-hidden mt-2" data-item-id="{{card.id}}">
 
-    <button type="button" class="increment-quantity flex items-center justify-center px-3 bg-teal-300 
-        text-white text-xl hover:bg-teal-400 hover:text-purple-300">+</button>
+    <button type="button"
+        class="increment-quantity flex items-center justify-center px-3 bg-teal-300 
+        text-white text-xl hover:bg-teal-400 hover:text-purple-400 active:bg-teal-300 active:text-purple-600">+</button>
 
     <input type="number" name="quantity-owned" class="quantity-owned form-input w-16 text-center 
         border-none bg-teal-300 text-white text-xl focus:outline-none focus:ring-0"
         value="{{#if card.quantity}}{{card.quantity}}{{else}}0{{/if}}" data-id="{{card.id}}" />
 
     <button type="button" class="decrement-quantity flex items-center justify-center px-3 bg-teal-300 text-white text-xl 
-            hover:bg-teal-400 hover:text-red-300">-</button>
+            hover:bg-teal-400 hover:text-red-400 active:bg-teal-300 active:text-red-600">-</button>
 
 </form>
