--- a/src/adapters/http/views/partials/cardInfo.hbs
+++ b/src/adapters/http/views/partials/cardInfo.hbs
@@ -1,10 +1,11 @@
 <section class="card-info flex flex-col md:flex-row section-container">
 
-    <section class="md:w-1/3 mb-4 md:mb-0">
+    <section class="md:w-1/3 mb-4 md:mb-6">
         <img class="card-image" src="{{card.imgSrc}}" alt="{{card.name}} - ({{card.setCode}})" />
     </section>
 
     <section class="play-info md:w-2/3 md:pl-6">
+
         <h3 class="card-title text-2xl font-bold mb-4">
             <div class="text-xl">
                 <span>{{card.name}}</span>
@@ -15,6 +16,7 @@
                 <span class="text-lg font-medium">{{toUpperCase card.setCode}} {{card.set.name}}</span>
             </div>
         </h3>
+
         <section class="subsection-container">
             <section class="subsection-container">
                 <h3 class="section-title">Oracle Text</h3>
@@ -27,6 +29,7 @@
             <p class="card-number section-content">#{{card.number}}</p>
             <p class="card-artist section-content">Illustrated by {{card.artist}}</p>
         </section>
+
         <section class="card-legalities subsection-container">
             <h3 class="section-title">Legalities</h3>
             <table class="list-disc list-inside section-content w-full">
@@ -40,15 +43,15 @@
         </section>
     </section>
 
-    <section class="inventory-info md:w-1/3 ml-4">
-        <h3 class="section-title">My Inventory</h3>
-        {{>cardsOwned}}
+    <section class="price-info md:w-1/3 md:pl-6 mb-4 md:mb-0 border-none">
+        <section class="subjsection-container">
+            <h3 class="section-title">Price</h3>
+            <span>${{#if card.price}}{{card.price}}{{else}}0.00{{/if}}</span>
+            <section class="inventory-info"></section>
+                {{>cardsOwned}}
+            </section>
+        </section>
     </section>
-</section>
-
-<section class="price-info section-container">
-    <h3 class="section-title">Price</h3>
-    <span>$</span>{{#if card.price}}{{card.price}}{{else}}0.00{{/if}}
 </section>
 
 <section class="other-printings section-container">
@@ -62,7 +65,8 @@
                     <a class="table-link" href="{{p.url}}">{{p.set.name}}</a>
                     <span> ({{toUpperCase p.setCode}})</span>
                 </td>
-                <td class="other-printing-price table-cell text-right">${{#if p.price}}{{p.price}}{{else}}0.00{{/if}}
+                <td class="other-printing-price table-cell text-right">
+                    ${{#if p.price}}{{p.price}}{{else}}0.00{{/if}}
                 </td>
             </tr>
             {{/each}}
