--- a/src/adapters/http/views/inventory.hbs
+++ b/src/adapters/http/views/inventory.hbs
@@ -32,7 +32,7 @@
                     <i class="ss ss-{{this.setCode}} ss-fw"></i>
                     <a href="/sets/{{this.setCode}}">{{this.setCode}}</a>
                 </td>
-                <td>{{#if this.price}}{{this.price}}{{else}}0{{/if}}</td>
+                <td>${{#if this.price}}{{this.price}}{{else}}0.00{{/if}}</td>
             </tr>
             {{/each}}
         </tbody>
