--- a/test/http/views/inventory.hbs
+++ b/test/http/views/inventory.hbs
@@ -11,6 +11,7 @@
         <thead>
             <tr>
                 <th>Owned</th>
+                <th></th>
                 <th>Name</th>
                 <th>Set</th>
                 <th>Price</th>
@@ -21,15 +22,17 @@
             <tr>
                 <td>{{>cardsOwned card=this}}</td>
                 <td>
+                    <img src="{{this.imgSrc}}" alt="{{this.name}}" />
+                </td>
+                <td>
                     <a href="{{this.url}}">{{this.name}}</a>
                     {{>reserved card=this}}
-                    <img src="{{this.imgSrc}}" alt="{{this.name}}" />
                 </td>
                 <td>
                     <i class="ss ss-{{this.setCode}} ss-fw"></i>
                     <a href="/sets/{{this.setCode}}">{{this.setCode}}</a>
                 </td>
-                <td>{{#if this.price}}{{this.price}}{{else}}0{{/if}}</td>
+                <td>${{#if this.price}}{{this.price}}{{else}}0.00{{/if}}</td>
             </tr>
             {{/each}}
         </tbody>
