--- a/src/adapters/http/views/inventory.hbs
+++ b/src/adapters/http/views/inventory.hbs
@@ -1,4 +1,4 @@
-<div id="user-inventory">
+<section id="user-inventory" class="section-container">
     <h3 id="user-inventory-heading">{{this.username}}'s Inventory</h3>
     <section id="user-inventory-metadata">
         <div id="user-inventory-value" class="user-inventory-metadata-item">
@@ -7,7 +7,7 @@
         </div>
     </section>
 
-    <table id="user-inventory-cards">
+    <table id="user-inventory-cards" class="table-container w-full">
         <thead>
             <tr>
                 <th>Owned</th>
@@ -37,5 +37,5 @@
             {{/each}}
         </tbody>
     </table>
-</div>
+</section>
 <script src="/public/js/updateInventory.js" defer></script>
