--- a/src/adapters/http/views/inventory.hbs
+++ b/src/adapters/http/views/inventory.hbs
@@ -11,7 +11,6 @@
         <thead>
             <tr>
                 <th>Owned</th>
-                <th></th>
                 <th>Name</th>
                 <th>Set</th>
                 <th>Price</th>
@@ -21,12 +20,12 @@
             {{#each cards}}
             <tr>
                 <td>{{>cardsOwned card=this}}</td>
-                <td>
-                    <img src="{{this.imgSrc}}" alt="{{this.name}}" />
-                </td>
-                <td>
+                <td class="inventory-item" data-img-src="{{this.imgSrc}}">
                     <a href="{{this.url}}">{{this.name}}</a>
                     {{>reserved card=this}}
+                    <a href="{{this.url}}" class="card-img-link">
+                        <img src="{{this.imgSrc}}" alt="{{this.name}}" class="card-img-preview" />
+                    </a>
                 </td>
                 <td>
                     <i class="ss ss-{{this.setCode}} ss-fw"></i>
